--- a/translations/en-US.json
+++ b/translations/en-US.json
@@ -23,6 +23,29 @@
     "common.success": "Success",
     "common.url": "URL",
     "common.warning": "Warning",
+    "categories.title": "Category Management",
+    "categories.subtitle": "Manage categories for Tools, Books, Wiki and other modules",
+    "categories.create": "Create Category",
+    "categories.add": "Add Category",
+    "categories.modules.tools": "Tool Management Categories",
+    "categories.modules.books": "Book Management Categories",
+    "categories.modules.wiki": "Wiki Management Categories",
+    "categories.form.name": "Category Name",
+    "categories.form.name.placeholder": "Enter category name",
+    "categories.form.icon": "Icon",
+    "categories.form.icon.placeholder": "Bootstrap icon name",
+    "categories.form.icon.help": "e.g.: folder, tags, gear",
+    "categories.form.color": "Color",
+    "categories.form.description": "Description",
+    "categories.form.description.placeholder": "Category description (optional)",
+    "categories.form.enabled": "Enable Category",
+    "categories.form.sort_order": "Sort Order",
+    "settings.category.management": "Category Management",
+    "settings.category.description": "Manage category configurations for Toolbox, Book Collection, Wiki Knowledge Base and other modules",
+    "settings.manage.categories": "Manage Categories",
+    "tools.manage.categories": "Manage Categories",
+    "books.manage.categories": "Manage Categories",
+    "wiki.manage.categories": "Manage Categories",
     "deploy.auth.key": "Private Key",
     "deploy.auth.method": "Authentication Method",
     "deploy.auth.password": "Password",
@@ -201,7 +224,7 @@
     "nav.deploy": "Deploy",
     "nav.files": "Files",
     "nav.home": "Home",
-    "nav.images": "Images",
+    "nav.images": "Static Files",
     "nav.settings": "Settings",
     "nav.trash": "Trash",
     "serve.open": "Open Preview",
@@ -361,8 +384,178 @@
     "wiki.category.examples": "Practice Examples",
     "tools.title": "Toolbox",
     "tools.subtitle": "Collect and manage your commonly used tools and online utilities",
+    "tools.add.tool": "Add Tool",
+    "tools.form.name": "Tool Name",
+    "tools.form.category": "Category",
+    "tools.form.icon": "Icon",
+    "tools.form.url": "URL",
+    "tools.form.description": "Description",
+    "tools.form.tags": "Tags",
+    "tools.form.favorite": "Mark as Favorite",
     "books.title": "Book Collection",
     "books.subtitle": "Collect and manage your technical books, documentation and learning resources",
+    "books.add.book": "Add Book",
+    "books.form.title": "Book Title",
+    "books.form.category": "Category",
+    "books.form.author": "Author",
+    "books.form.publisher": "Publisher",
+    "books.form.url": "URL",
+    "books.form.cover": "Cover Image URL",
+    "books.form.description": "Description",
+    "books.form.rating": "Rating",
+    "books.form.status": "Reading Status",
+    "books.form.tags": "Tags",
+    "books.status.want": "Want to Read",
+    "books.status.reading": "Reading",
+    "books.status.completed": "Completed",
+    "books.status.reference": "Reference",
+    "books.rating.unrated": "Unrated",
+    "books.rating.5": "★★★★★ (5 stars)",
+    "books.rating.4": "★★★★☆ (4 stars)",
+    "books.rating.3": "★★★☆☆ (3 stars)",
+    "books.rating.2": "★★☆☆☆ (2 stars)",
+    "books.rating.1": "★☆☆☆☆ (1 star)",
     "wiki.title": "Knowledge Base",
-    "wiki.subtitle": "Collect and manage MCP guides, AI terminology and technical documentation"
+    "wiki.subtitle": "Collect and manage MCP guides, AI terminology and technical documentation",
+    "wiki.add.entry": "Add Entry",
+    "wiki.form.title": "Entry Title",
+    "wiki.form.category": "Category",
+    "wiki.form.type": "Entry Type",
+    "wiki.form.difficulty": "Difficulty Level",
+    "wiki.form.url": "URL",
+    "wiki.form.description": "Description",
+    "wiki.form.tags": "Tags",
+    "wiki.form.keywords": "Keywords",
+    "wiki.form.official": "Official Documentation",
+    "wiki.form.favorite": "Important Entry",
+    "wiki.form.frequent": "Frequently Used",
+    "wiki.search.title": "Knowledge Search",
+    "wiki.type.guide": "Guide",
+    "wiki.type.reference": "Reference",
+    "wiki.type.tutorial": "Tutorial",
+    "wiki.type.glossary": "Glossary",
+    "wiki.type.example": "Example",
+    "wiki.difficulty.beginner": "Beginner",
+    "wiki.difficulty.intermediate": "Intermediate",
+    "wiki.difficulty.advanced": "Advanced",
+    "wiki.difficulty.expert": "Expert",
+    "settings.hugo.path.not.set": "Hugo project path not set",
+    "articles.path.not.exist": "Article directory does not exist",
+    "datetime.repair.title": "DateTime Repair",
+    "datetime.repair.check": "Check DateTime Format",
+    "datetime.repair.batch": "Batch Repair DateTime",
+    "datetime.repair.checking": "Checking datetime formats...",
+    "datetime.repair.total.files": "Total Files",
+    "datetime.repair.valid.count": "Correct Format",
+    "datetime.repair.invalid.count": "Need Repair",
+    "datetime.repair.success.rate": "Success Rate",
+    "datetime.repair.invalid.files": "Files Need Repair",
+    "datetime.repair.problem.type": "Problem Type",
+    "datetime.repair.current.format": "Current Format",
+    "datetime.repair.suggested.format": "Suggested Format",
+    "datetime.repair.action": "Action",
+    "datetime.repair.missing.date": "Missing Date",
+    "datetime.repair.invalid.format": "Invalid Format",
+    "datetime.repair.read.error": "Read Failed",
+    "datetime.repair.cannot.fix": "Cannot Fix",
+    "datetime.repair.single.fix": "Fix",
+    "datetime.repair.all.success": "Excellent!",
+    "datetime.repair.all.valid": "All article datetime formats comply with Hugo requirements",
+    "datetime.repair.confirm": "Are you sure you want to batch repair all blog datetime formats?\\nThis will modify file contents, backup is recommended.",
+    "datetime.repair.repairing": "Repairing...",
+    "datetime.repair.completed": "Batch repair completed!",
+    "datetime.repair.success.single": "Repair successful!",
+    "articles.publish.date": "Publish Date",
+    "articles.publish.date.help": "Set the publish time of the article",
+    "datetime.format.warning": "Current datetime format does not meet Hugo requirements (RFC3339 format required)",
+    "datetime.current.format": "Current Format",
+    "datetime.suggested.format": "Suggested Format",
+    
+    "deploy.quick.operations": "Quick Operations",
+    "deploy.build.control": "Build Control",
+    "deploy.build.action": "Build",
+    "deploy.clean.action": "Clean",
+    "deploy.build.waiting": "Waiting for build",
+    "deploy.preview.service": "Preview Service",
+    "serve.start.action": "Start",
+    "serve.stop.action": "Stop",
+    "serve.restart.action": "Restart",
+    "serve.not.running": "Not running",
+    "deploy.batch.operations": "Batch Operations",
+    "deploy.full.deploy": "Full",
+    "deploy.incremental.deploy": "Incremental",
+    "deploy.build.required": "Build required",
+    "deploy.sync.status": "Sync Status",
+    "deploy.sync.success": "Success",
+    "deploy.sync.failed": "Failed",
+    "deploy.sync.pending": "Pending",
+    "deploy.statistics": "Statistics",
+    "deploy.files.count": "files",
+    "deploy.transfer.size": "Transfer Size",
+    "deploy.no.statistics": "No statistics available",
+    "deploy.server.list": "Server List",
+    "deploy.server.disabled": "Disabled",
+    "common.not.set": "-",
+    "deploy.waiting.deploy": "Waiting for deployment",
+    "deploy.config.server": "Configure server",
+    "deploy.test.connection": "Test connection",
+    "deploy.operation.log": "Operation Log",
+    "deploy.clear.log": "Clear Log",
+    "deploy.log.ready": "Ready, waiting for operations...",
+    "deploy.domain.optional": "Domain (Optional)",
+    "deploy.host.placeholder": "e.g.: 192.168.1.100",
+    
+    "images.title": "Static File Management",
+    "images.subtitle": "Manage Hugo project static file resources, including images, CSS, JS, etc.",
+    "images.upload.files": "Upload Files",
+    "images.filter.files": "Filter Files",
+    "images.select.all": "Select All",
+    "images.clear.selection": "Clear Selection",
+    "images.download.selected": "Download Selected",
+    "images.delete.selected": "Delete Selected",
+    "images.file.list": "File List",
+    "images.file.name": "File Name",
+    "images.file.size": "Size",
+    "images.file.type": "Type",
+    "images.file.modified": "Modified",
+    "images.file.actions": "Actions",
+    "images.no.files": "No Files",
+    "images.no.files.hint": "Current directory is empty, please upload files or select another directory",
+    "images.current.hugo.project": "Current Hugo Project:",
+    "images.directory.title": "Static Files Directory",
+    "images.files.count": "files",
+    "images.total.size": "Total Size",
+    "images.stats.template": "Images: 0 files (0 B)",
+    "images.create.folder": "New Folder",
+    "images.static.files": "Static Files",
+    "images.total.files.count": "Total Files",
+    "images.total.capacity": "Total Capacity",
+    "images.image.files": "Image Files",
+    "images.image.capacity": "Image Capacity",
+    "images.no.images": "No Images",
+    "images.upload.hint": "Click the \"Upload Images\" button above to add images",
+    "images.upload.now": "Upload Now",
+    "images.upload.images": "Upload Images",
+    "images.upload.drop.hint": "Drag images here or click to select files",
+    "images.upload.formats": "Supports JPG, PNG, GIF, WebP, SVG formats",
+    "images.new.folder": "New Folder",
+    
+    "trash.title": "Trash",
+    "trash.subtitle": "Manage deleted articles, restore or permanently delete them",
+    "trash.restore.selected": "Restore Selected",
+    "trash.empty.trash": "Empty Trash",
+    "trash.files.count": "files",
+    "trash.files.list": "Trash Files",
+    "trash.select.all": "Select All",
+    "trash.clear.selection": "Clear Selection",
+    "trash.permanent.delete": "Permanent Delete",
+    "trash.empty.title": "Trash is Empty",
+    "trash.empty.message": "No deleted files",
+    "trash.current.hugo.project": "Current Hugo Project:",
+    "trash.load.failed": "Failed to load trash",
+    "trash.original.path": "Original Path",
+    "trash.delete.time": "Delete Time",
+    "trash.restore": "Restore",
+    
+    "footer.copyright": "Hugo Manager © 2025 - Making file management safer"
 }
