--- a/translations/ja-JP.json
+++ b/translations/ja-JP.json
@@ -144,7 +144,7 @@
     "nav.deploy": "デプロイ",
     "nav.files": "ファイル",
     "nav.home": "ホーム",
-    "nav.images": "画像",
+    "nav.images": "静的ファイル",
     "nav.settings": "設定",
     "nav.trash": "ゴミ箱",
     "serve.open": "プレビューを開く",
@@ -234,5 +234,189 @@
     "hugo.install.available.version": "利用可能なバージョン",
     "hugo.install.installing": "Hugoをインストール中...",
     "hugo.install.success": "Hugoが正常にインストールされました！",
-    "hugo.install.failed": "Hugoのインストールに失敗しました"
+    "hugo.install.failed": "Hugoのインストールに失敗しました",
+    "categories.title": "カテゴリー管理",
+    "categories.subtitle": "ツール、書籍、Wikiなどのモジュールカテゴリー設定を管理",
+    "categories.create": "カテゴリー作成",
+    "categories.add": "カテゴリー追加",
+    "categories.modules.tools": "ツール管理カテゴリー",
+    "categories.modules.books": "書籍管理カテゴリー",
+    "categories.modules.wiki": "Wiki管理カテゴリー",
+    "categories.form.name": "カテゴリー名",
+    "categories.form.name.placeholder": "カテゴリー名を入力",
+    "categories.form.icon": "アイコン",
+    "categories.form.icon.placeholder": "Bootstrapアイコン名",
+    "categories.form.icon.help": "例：folder、tags、gear",
+    "categories.form.color": "色",
+    "categories.form.description": "説明",
+    "categories.form.description.placeholder": "カテゴリーの説明情報（オプション）",
+    "categories.form.enabled": "カテゴリーを有効にする",
+    "categories.form.sort_order": "並び順",
+    "settings.category.management": "カテゴリー管理",
+    "settings.category.description": "ツールボックス、書籍収集、Wiki知識ベースなどのモジュールカテゴリー設定を管理",
+    "settings.manage.categories": "カテゴリーを管理",
+    "tools.manage.categories": "カテゴリーを管理",
+    "books.manage.categories": "カテゴリーを管理",
+    "wiki.manage.categories": "カテゴリーを管理",
+    "articles.title": "記事一覧",
+    "articles.subtitle": "すべてのブログ記事を閲覧、ページング・時間フィルタリング対応",
+    "articles.total.count": "件の記事",
+    "articles.filter": "記事をフィルター",
+    "articles.filter.year": "年でフィルター",
+    "articles.filter.month": "月でフィルター",
+    "articles.filter.all.years": "すべての年",
+    "articles.filter.all.months": "すべての月",
+    "articles.month.1": "1月",
+    "articles.month.2": "2月",
+    "articles.month.3": "3月",
+    "articles.month.4": "4月",
+    "articles.month.5": "5月",
+    "articles.month.6": "6月",
+    "articles.month.7": "7月",
+    "articles.month.8": "8月",
+    "articles.month.9": "9月",
+    "articles.month.10": "10月",
+    "articles.month.11": "11月",
+    "articles.month.12": "12月",
+    "articles.actions": "操作",
+    "articles.filter.apply": "フィルターを適用",
+    "articles.filter.clear": "フィルターをクリア",
+    "articles.list": "記事一覧",
+    "articles.showing": "表示中",
+    "articles.items": "件",
+    "articles.root.directory": "ルートディレクトリ",
+    "articles.edit": "編集",
+    "articles.no.articles": "記事がありません",
+    "articles.no.articles.hint": "現在のフィルター条件では記事が見つかりません",
+    "articles.back.home": "ホームに戻る",
+    "articles.current.project": "現在のHugoプロジェクト：",
+    "articles.delete.confirm": "この記事を削除しますか？記事はゴミ箱に移動されます。",
+    "articles.delete.failed": "削除に失敗しました",
+    "articles.delete.success": "記事をゴミ箱に移動しました",
+    "articles.delete.error": "削除に失敗しました",
+    "articles.pagination.first": "最初",
+    "articles.pagination.prev": "前へ",
+    "articles.pagination.next": "次へ",
+    "articles.pagination.last": "最後",
+    "home.view.all.articles": "すべての記事を表示",
+    "articles.tab.published": "公開済み",
+    "articles.tab.drafts": "下書き",
+    "articles.tab.issues": "問題検出",
+    "articles.draft.badge": "下書き",
+    "articles.search.filter": "検索とフィルター",
+    "articles.search": "記事を検索",
+    "articles.search.placeholder": "キーワードでタイトルまたは内容を検索...",
+    "articles.search.actions": "検索操作",
+    "articles.search.button": "検索",
+    "articles.search.clear": "クリア",
+    "articles.filter.actions": "フィルター操作",
+    "articles.filter.clear.all": "すべてクリア",
+    "articles.search.results": "検索結果：",
+    "articles.search.found": "見つかりました",
+    "articles.search.articles": "件の記事",
+    "articles.issues.detected": "問題を発見：",
+    "deploy.multi.title": "マルチサーバーデプロイ管理",
+    "deploy.multi.subtitle": "複数のデプロイ対象を管理、独立した設定とデプロイ制御に対応",
+    "deploy.server.name": "サーバー名",
+    "deploy.server.domain": "ドメイン",
+    "deploy.server.host": "サーバーアドレス",
+    "deploy.server.status": "ステータス",
+    "deploy.server.progress": "進行状況",
+    "deploy.server.actions": "操作",
+    "deploy.server.add": "サーバーを追加",
+    "deploy.server.config": "設定",
+    "deploy.server.deploy": "デプロイ",
+    "deploy.server.build.deploy": "ビルド+デプロイ",
+    "deploy.server.pause": "一時停止",
+    "deploy.server.resume": "再開",
+    "deploy.server.stop": "停止",
+    "deploy.server.delete": "削除",
+    "deploy.server.test": "接続テスト",
+    "deploy.status.idle": "待機中",
+    "deploy.status.building": "ビルド中",
+    "deploy.status.deploying": "デプロイ中",
+    "deploy.status.success": "成功",
+    "deploy.status.failed": "失敗",
+    "deploy.status.paused": "一時停止中",
+    "deploy.modal.server.config": "サーバー設定",
+    "deploy.modal.server.name.placeholder": "例：本番サーバー",
+    "deploy.modal.domain.placeholder": "例：example.com",
+    "deploy.modal.enabled": "このサーバーを有効にする",
+    "deploy.modal.save": "設定を保存",
+    "deploy.modal.cancel": "キャンセル",
+    "deploy.confirm.delete": "このサーバー設定を削除しますか？",
+    "deploy.no.servers": "サーバー設定がありません",
+    "deploy.no.servers.hint": "「サーバーを追加」ボタンをクリックして最初のデプロイ対象を作成",
+    "build.hugo.title": "Hugoビルド",
+    "build.build.site": "サイトをビルド",
+    "build.clean.build": "クリーンビルド",
+    "build.description": "静的HTMLファイルを生成し、デプロイの準備をします",
+    "serve.status.running": "実行中",
+    "serve.status.stopped": "停止中",
+    "serve.open": "プレビューを開く",
+    "serve.start": "サービスを開始",
+    "serve.restart": "サービスを再開",
+    "serve.stop": "サービスを停止",
+    "settings.hugo.path.not.set": "Hugoプロジェクトパスが設定されていません",
+    "articles.path.not.exist": "記事ディレクトリが存在しません",
+    "datetime.repair.title": "時間修復",
+    "datetime.repair.check": "時間フォーマットをチェック",
+    "datetime.repair.batch": "時間を一括修復",
+    "datetime.repair.checking": "時間フォーマットをチェック中...",
+    "datetime.repair.total.files": "総ファイル数",
+    "datetime.repair.valid.count": "フォーマット正常",
+    "datetime.repair.invalid.count": "修復が必要",
+    "datetime.repair.success.rate": "正確率",
+    "datetime.repair.invalid.files": "修復が必要なファイル",
+    "datetime.repair.problem.type": "問題タイプ",
+    "datetime.repair.current.format": "現在のフォーマット",
+    "datetime.repair.suggested.format": "推奨フォーマット",
+    "datetime.repair.action": "操作",
+    "datetime.repair.missing.date": "日付が不足",
+    "datetime.repair.invalid.format": "フォーマットエラー",
+    "datetime.repair.read.error": "読み取り失敗",
+    "datetime.repair.cannot.fix": "修復不可",
+    "datetime.repair.single.fix": "修復",
+    "datetime.repair.all.success": "素晴らしい！",
+    "datetime.repair.all.valid": "すべての記事の時間フォーマットがHugo要件に適合しています",
+    "datetime.repair.confirm": "すべてのブログの時間フォーマットを一括修復しますか？\nファイル内容を変更するため、事前にバックアップをお勧めします。",
+    "datetime.repair.repairing": "修復中...",
+    "datetime.repair.completed": "一括修復が完了しました！",
+    "datetime.repair.success.single": "修復成功！",
+    "articles.publish.date": "公開日",
+    "articles.publish.date.help": "記事の公開時刻を設定",
+    "datetime.format.warning": "現在の時間フォーマットはHugo要件に適合していません（RFC3339フォーマットが必要）",
+    "datetime.current.format": "現在のフォーマット",
+    "datetime.suggested.format": "推奨フォーマット",
+    "articles.editor.title": "記事を編集",
+    "articles.editor.content": "コンテンツ編集",
+    "articles.editor.metadata": "メタデータ",
+    "articles.editor.settings": "詳細設定",
+    "articles.editor.markdown.content": "Markdownコンテンツ",
+    "articles.editor.insert.image": "画像を挿入",
+    "articles.editor.title.label": "記事タイトル",
+    "articles.editor.author": "著者",
+    "articles.editor.type": "記事タイプ",
+    "articles.editor.categories": "カテゴリー",
+    "articles.editor.tags": "タグ",
+    "articles.editor.url": "URL/パーマリンク",
+    "articles.new.article": "新しい記事",
+    "articles.back.to.list": "リストに戻る",
+    "articles.preview": "プレビュー",
+    "articles.preview.title": "記事プレビュー",
+    "articles.preview.loading": "記事コンテンツを読み込み中...",
+    "nav.tools": "ツールボックス",
+    "nav.books": "書籍収集",
+    "nav.wiki": "知識ベース",
+    "wiki.category.ai": "AIプログラミングガイド",
+    "wiki.category.claude": "Claude Code使用法",
+    "wiki.category.mcp": "MCPプロトコル",
+    "wiki.category.terms": "AI用語辞典",
+    "wiki.category.examples": "実践例",
+    "tools.title": "ツールボックス",
+    "tools.subtitle": "よく使用するツールソフトウェアやオンラインツールを収集・管理",
+    "books.title": "書籍収集",
+    "books.subtitle": "技術書、ドキュメント、学習リソースを収集・管理",
+    "wiki.title": "知識ベース",
+    "wiki.subtitle": "MCP使用ガイド、AI用語、技術ドキュメントを収集・管理"
 }
