--- a/translations/ko-KR.json
+++ b/translations/ko-KR.json
@@ -234,5 +234,191 @@
     "hugo.install.available.version": "사용 가능한 버전",
     "hugo.install.installing": "Hugo 설치 중...",
     "hugo.install.success": "Hugo 설치 성공!",
-    "hugo.install.failed": "Hugo 설치 실패"
+    "hugo.install.failed": "Hugo 설치 실패",
+    "categories.title": "카테고리 관리",
+    "categories.subtitle": "도구, 서적, Wiki 등 모듈의 카테고리 설정 관리",
+    "categories.create": "카테고리 생성",
+    "categories.add": "카테고리 추가",
+    "categories.modules.tools": "도구 관리 카테고리",
+    "categories.modules.books": "서적 관리 카테고리",
+    "categories.modules.wiki": "Wiki 관리 카테고리",
+    "categories.form.name": "카테고리 이름",
+    "categories.form.name.placeholder": "카테고리 이름 입력",
+    "categories.form.icon": "아이콘",
+    "categories.form.icon.placeholder": "Bootstrap 아이콘 이름",
+    "categories.form.icon.help": "예: folder, tags, gear",
+    "categories.form.color": "색상",
+    "categories.form.description": "설명",
+    "categories.form.description.placeholder": "카테고리 설명 정보 (선택사항)",
+    "categories.form.enabled": "카테고리 사용",
+    "categories.form.sort_order": "정렬 순서",
+    "settings.category.management": "카테고리 관리",
+    "settings.category.description": "도구함, 서적 수집, Wiki 지식베이스 등 모듈의 카테고리 설정 관리",
+    "settings.manage.categories": "카테고리 관리",
+    "tools.manage.categories": "카테고리 관리",
+    "books.manage.categories": "카테고리 관리",
+    "wiki.manage.categories": "카테고리 관리",
+    "articles.title": "글 목록",
+    "articles.subtitle": "모든 블로그 글 둘러보기, 페이지 분할 및 시간 필터링 지원",
+    "articles.total.count": "편의 글",
+    "articles.filter": "글 필터링",
+    "articles.filter.year": "연도별 필터링",
+    "articles.filter.month": "월별 필터링",
+    "articles.filter.all.years": "모든 연도",
+    "articles.filter.all.months": "모든 월",
+    "articles.month.1": "1월",
+    "articles.month.2": "2월",
+    "articles.month.3": "3월",
+    "articles.month.4": "4월",
+    "articles.month.5": "5월",
+    "articles.month.6": "6월",
+    "articles.month.7": "7월",
+    "articles.month.8": "8월",
+    "articles.month.9": "9월",
+    "articles.month.10": "10월",
+    "articles.month.11": "11월",
+    "articles.month.12": "12월",
+    "articles.actions": "작업",
+    "articles.filter.apply": "필터 적용",
+    "articles.filter.clear": "필터 지우기",
+    "articles.list": "글 목록",
+    "articles.showing": "표시 중",
+    "articles.items": "항목",
+    "articles.root.directory": "루트 디렉토리",
+    "articles.edit": "편집",
+    "articles.no.articles": "글이 없습니다",
+    "articles.no.articles.hint": "현재 필터 조건에서 글을 찾을 수 없습니다",
+    "articles.back.home": "홈으로 돌아가기",
+    "articles.current.project": "현재 Hugo 프로젝트:",
+    "articles.delete.confirm": "이 글을 삭제하시겠습니까? 글이 휴지통으로 이동됩니다.",
+    "articles.delete.failed": "삭제 실패",
+    "articles.delete.success": "글이 휴지통으로 이동되었습니다",
+    "articles.delete.error": "삭제 실패",
+    "articles.pagination.first": "첫 페이지",
+    "articles.pagination.prev": "이전 페이지",
+    "articles.pagination.next": "다음 페이지",
+    "articles.pagination.last": "마지막 페이지",
+    "home.view.all.articles": "모든 글 보기",
+    "articles.tab.published": "발행됨",
+    "articles.tab.drafts": "초안함",
+    "articles.tab.issues": "문제 감지",
+    "articles.draft.badge": "초안",
+    "articles.search.filter": "검색 및 필터링",
+    "articles.search": "글 검색",
+    "articles.search.placeholder": "키워드를 입력하여 제목이나 내용 검색...",
+    "articles.search.actions": "검색 작업",
+    "articles.search.button": "검색",
+    "articles.search.clear": "지우기",
+    "articles.filter.actions": "필터링 작업",
+    "articles.filter.clear.all": "모두 지우기",
+    "articles.search.results": "검색 결과:",
+    "articles.search.found": "찾은 결과:",
+    "articles.search.articles": "편의 글",
+    "articles.issues.detected": "발견된 문제:",
+    "deploy.multi.title": "다중 서버 배포 관리",
+    "deploy.multi.subtitle": "여러 배포 대상을 관리하고 독립적인 설정 및 배포 제어 지원",
+    "deploy.server.name": "서버 이름",
+    "deploy.server.domain": "도메인",
+    "deploy.server.host": "서버 주소",
+    "deploy.server.status": "상태",
+    "deploy.server.progress": "진행률",
+    "deploy.server.actions": "작업",
+    "deploy.server.add": "서버 추가",
+    "deploy.server.config": "구성",
+    "deploy.server.deploy": "배포",
+    "deploy.server.build.deploy": "빌드+배포",
+    "deploy.server.pause": "일시정지",
+    "deploy.server.resume": "재개",
+    "deploy.server.stop": "중지",
+    "deploy.server.delete": "삭제",
+    "deploy.server.test": "연결 테스트",
+    "deploy.status.idle": "대기 중",
+    "deploy.status.building": "빌드 중",
+    "deploy.status.deploying": "배포 중",
+    "deploy.status.success": "성공",
+    "deploy.status.failed": "실패",
+    "deploy.status.paused": "일시정지됨",
+    "deploy.modal.server.config": "서버 구성",
+    "deploy.modal.server.name.placeholder": "예: 프로덕션 서버",
+    "deploy.modal.domain.placeholder": "예: example.com",
+    "deploy.modal.enabled": "이 서버 사용",
+    "deploy.modal.save": "구성 저장",
+    "deploy.modal.cancel": "취소",
+    "deploy.confirm.delete": "이 서버 구성을 삭제하시겠습니까?",
+    "deploy.no.servers": "서버 구성이 없습니다",
+    "deploy.no.servers.hint": "\"서버 추가\" 버튼을 클릭하여 첫 번째 배포 대상을 생성하세요",
+    "build.hugo.title": "Hugo 빌드",
+    "build.build.site": "사이트 빌드",
+    "build.clean.build": "정리 후 빌드",
+    "build.description": "정적 HTML 파일을 생성하여 배포 준비",
+    "serve.status.running": "실행 중",
+    "serve.status.stopped": "중지됨",
+    "serve.open": "미리보기 열기",
+    "serve.start": "서비스 시작",
+    "serve.restart": "서비스 재시작",
+    "serve.stop": "서비스 중지",
+    "settings.hugo.path.not.set": "Hugo 프로젝트 경로가 설정되지 않았습니다",
+    "articles.path.not.exist": "글 디렉토리가 존재하지 않습니다",
+    "datetime.repair.title": "시간 수정",
+    "datetime.repair.check": "시간 형식 확인",
+    "datetime.repair.batch": "일괄 시간 수정",
+    "datetime.repair.checking": "시간 형식 확인 중...",
+    "datetime.repair.total.files": "총 파일 수",
+    "datetime.repair.valid.count": "형식 정확",
+    "datetime.repair.invalid.count": "수정 필요",
+    "datetime.repair.success.rate": "정확률",
+    "datetime.repair.invalid.files": "수정이 필요한 파일",
+    "datetime.repair.problem.type": "문제 유형",
+    "datetime.repair.current.format": "현재 형식",
+    "datetime.repair.suggested.format": "권장 형식",
+    "datetime.repair.action": "작업",
+    "datetime.repair.missing.date": "날짜 누락",
+    "datetime.repair.invalid.format": "형식 오류",
+    "datetime.repair.read.error": "읽기 실패",
+    "datetime.repair.cannot.fix": "수정 불가",
+    "datetime.repair.single.fix": "수정",
+    "datetime.repair.all.success": "완벽해요!",
+    "datetime.repair.all.valid": "모든 글의 시간 형식이 Hugo 요구사항에 맞습니다",
+    "datetime.repair.confirm": "모든 블로그의 시간 형식을 일괄 수정하시겠습니까?\n파일 내용이 수정되므로 먼저 백업하는 것을 권장합니다.",
+    "datetime.repair.repairing": "수정 중...",
+    "datetime.repair.completed": "일괄 수정 완료!",
+    "datetime.repair.success.single": "수정 성공!",
+    "articles.publish.date": "발행일",
+    "articles.publish.date.help": "글의 발행 시간 설정",
+    "datetime.format.warning": "현재 시간 형식이 Hugo 요구사항에 맞지 않습니다(RFC3339 형식 필요)",
+    "datetime.current.format": "현재 형식",
+    "datetime.suggested.format": "권장 형식",
+    "articles.editor.title": "글 편집",
+    "articles.editor.content": "내용 편집",
+    "articles.editor.metadata": "메타데이터",
+    "articles.editor.settings": "고급 설정",
+    "articles.editor.markdown.content": "Markdown 내용",
+    "articles.editor.insert.image": "이미지 삽입",
+    "articles.editor.title.label": "글 제목",
+    "articles.editor.author": "작성자",
+    "articles.editor.type": "글 유형",
+    "articles.editor.categories": "카테고리",
+    "articles.editor.tags": "태그",
+    "articles.editor.url": "URL/고정 링크",
+    "articles.new.article": "새 글",
+    "articles.back.to.list": "목록으로 돌아가기",
+    "articles.preview": "미리보기",
+    "articles.preview.title": "글 미리보기",
+    "articles.preview.loading": "글 내용 로딩 중...",
+    "nav.tools": "도구함",
+    "nav.books": "서적 수집",
+    "nav.wiki": "지식베이스",
+    "nav.images": "정적 파일",
+    "nav.deploy": "배포 관리",
+    "wiki.category.ai": "AI 프로그래밍 가이드",
+    "wiki.category.claude": "Claude Code 사용법",
+    "wiki.category.mcp": "MCP 프로토콜",
+    "wiki.category.terms": "AI 용어 사전",
+    "wiki.category.examples": "실무 사례",
+    "tools.title": "도구함",
+    "tools.subtitle": "자주 사용하는 도구 소프트웨어와 온라인 도구를 수집하고 관리",
+    "books.title": "서적 수집",
+    "books.subtitle": "기술 서적, 문서 및 학습 자료를 수집하고 관리",
+    "wiki.title": "지식베이스",
+    "wiki.subtitle": "MCP 사용 가이드, AI 용어 및 기술 문서를 수집하고 관리"
 }
