--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -234,5 +234,190 @@
     "hugo.install.available.version": "Доступная версия",
     "hugo.install.installing": "Установка Hugo...",
     "hugo.install.success": "Hugo успешно установлен!",
-    "hugo.install.failed": "Ошибка установки Hugo"
+    "hugo.install.failed": "Ошибка установки Hugo",
+    "categories.title": "Управление категориями",
+    "categories.subtitle": "Управление настройками категорий для модулей: инструменты, книги, Wiki и др.",
+    "categories.create": "Создать категорию",
+    "categories.add": "Добавить категорию",
+    "categories.modules.tools": "Категории управления инструментами",
+    "categories.modules.books": "Категории управления книгами",
+    "categories.modules.wiki": "Категории управления Wiki",
+    "categories.form.name": "Название категории",
+    "categories.form.name.placeholder": "Введите название категории",
+    "categories.form.icon": "Иконка",
+    "categories.form.icon.placeholder": "Название иконки Bootstrap",
+    "categories.form.icon.help": "Например: folder, tags, gear",
+    "categories.form.color": "Цвет",
+    "categories.form.description": "Описание",
+    "categories.form.description.placeholder": "Описание категории (необязательно)",
+    "categories.form.enabled": "Включить категорию",
+    "categories.form.sort_order": "Порядок сортировки",
+    "settings.category.management": "Управление категориями",
+    "settings.category.description": "Управление настройками категорий для модулей: инструменты, коллекция книг, база знаний Wiki и др.",
+    "settings.manage.categories": "Управление категориями",
+    "tools.manage.categories": "Управление категориями",
+    "books.manage.categories": "Управление категориями",
+    "wiki.manage.categories": "Управление категориями",
+    "articles.title": "Список статей",
+    "articles.subtitle": "Просмотр всех статей блога с поддержкой пагинации и фильтрации по времени",
+    "articles.total.count": "статей",
+    "articles.filter": "Фильтр статей",
+    "articles.filter.year": "Фильтр по году",
+    "articles.filter.month": "Фильтр по месяцу",
+    "articles.filter.all.years": "Все годы",
+    "articles.filter.all.months": "Все месяцы",
+    "articles.month.1": "Январь",
+    "articles.month.2": "Февраль",
+    "articles.month.3": "Март",
+    "articles.month.4": "Апрель",
+    "articles.month.5": "Май",
+    "articles.month.6": "Июнь",
+    "articles.month.7": "Июль",
+    "articles.month.8": "Август",
+    "articles.month.9": "Сентябрь",
+    "articles.month.10": "Октябрь",
+    "articles.month.11": "Ноябрь",
+    "articles.month.12": "Декабрь",
+    "articles.actions": "Действия",
+    "articles.filter.apply": "Применить фильтр",
+    "articles.filter.clear": "Очистить фильтр",
+    "articles.list": "Список статей",
+    "articles.showing": "Показано",
+    "articles.items": "элементов",
+    "articles.root.directory": "Корневая директория",
+    "articles.edit": "Редактировать",
+    "articles.no.articles": "Нет статей",
+    "articles.no.articles.hint": "По текущим критериям фильтрации статьи не найдены",
+    "articles.back.home": "Вернуться на главную",
+    "articles.current.project": "Текущий проект Hugo:",
+    "articles.delete.confirm": "Вы уверены, что хотите удалить эту статью? Статья будет перемещена в корзину.",
+    "articles.delete.failed": "Не удалось удалить",
+    "articles.delete.success": "Статья перемещена в корзину",
+    "articles.delete.error": "Ошибка удаления",
+    "articles.pagination.first": "Первая",
+    "articles.pagination.prev": "Предыдущая",
+    "articles.pagination.next": "Следующая",
+    "articles.pagination.last": "Последняя",
+    "home.view.all.articles": "Просмотреть все статьи",
+    "articles.tab.published": "Опубликовано",
+    "articles.tab.drafts": "Черновики",
+    "articles.tab.issues": "Обнаружение проблем",
+    "articles.draft.badge": "Черновик",
+    "articles.search.filter": "Поиск и фильтрация",
+    "articles.search": "Поиск статей",
+    "articles.search.placeholder": "Введите ключевые слова для поиска в заголовках или содержимом...",
+    "articles.search.actions": "Действия поиска",
+    "articles.search.button": "Поиск",
+    "articles.search.clear": "Очистить",
+    "articles.filter.actions": "Действия фильтрации",
+    "articles.filter.clear.all": "Очистить все",
+    "articles.search.results": "Результаты поиска:",
+    "articles.search.found": "Найдено",
+    "articles.search.articles": "статей",
+    "articles.issues.detected": "Обнаружены проблемы:",
+    "nav.images": "Статические файлы",
+    "deploy.multi.title": "Управление развертыванием на нескольких серверах",
+    "deploy.multi.subtitle": "Управление несколькими целями развертывания с независимой конфигурацией и контролем развертывания",
+    "deploy.server.name": "Имя сервера",
+    "deploy.server.domain": "Домен",
+    "deploy.server.host": "Адрес сервера",
+    "deploy.server.status": "Статус",
+    "deploy.server.progress": "Прогресс",
+    "deploy.server.actions": "Действия",
+    "deploy.server.add": "Добавить сервер",
+    "deploy.server.config": "Конфигурация",
+    "deploy.server.deploy": "Развернуть",
+    "deploy.server.build.deploy": "Собрать+Развернуть",
+    "deploy.server.pause": "Приостановить",
+    "deploy.server.resume": "Продолжить",
+    "deploy.server.stop": "Остановить",
+    "deploy.server.delete": "Удалить",
+    "deploy.server.test": "Тест соединения",
+    "deploy.status.idle": "Бездействует",
+    "deploy.status.building": "Сборка",
+    "deploy.status.deploying": "Развертывание",
+    "deploy.status.success": "Успешно",
+    "deploy.status.failed": "Ошибка",
+    "deploy.status.paused": "Приостановлено",
+    "deploy.modal.server.config": "Конфигурация сервера",
+    "deploy.modal.server.name.placeholder": "Например: Продакшн сервер",
+    "deploy.modal.domain.placeholder": "Например: example.com",
+    "deploy.modal.enabled": "Включить этот сервер",
+    "deploy.modal.save": "Сохранить конфигурацию",
+    "deploy.modal.cancel": "Отмена",
+    "deploy.confirm.delete": "Вы уверены, что хотите удалить эту конфигурацию сервера?",
+    "deploy.no.servers": "Нет конфигураций серверов",
+    "deploy.no.servers.hint": "Нажмите кнопку \"Добавить сервер\" для создания первой цели развертывания",
+    "build.hugo.title": "Сборка Hugo",
+    "build.build.site": "Собрать сайт",
+    "build.clean.build": "Очистить и собрать",
+    "build.description": "Генерация статических HTML файлов для подготовки к развертыванию",
+    "serve.status.running": "Запущен",
+    "serve.status.stopped": "Остановлен",
+    "serve.open": "Открыть предпросмотр",
+    "serve.start": "Запустить сервис",
+    "serve.restart": "Перезапустить сервис",
+    "serve.stop": "Остановить сервис",
+    "settings.hugo.path.not.set": "Путь к проекту Hugo не установлен",
+    "articles.path.not.exist": "Директория статей не существует",
+    "datetime.repair.title": "Восстановление времени",
+    "datetime.repair.check": "Проверить формат времени",
+    "datetime.repair.batch": "Массовое восстановление времени",
+    "datetime.repair.checking": "Проверка формата времени...",
+    "datetime.repair.total.files": "Всего файлов",
+    "datetime.repair.valid.count": "Правильный формат",
+    "datetime.repair.invalid.count": "Нуждается в восстановлении",
+    "datetime.repair.success.rate": "Процент правильных",
+    "datetime.repair.invalid.files": "Файлы для восстановления",
+    "datetime.repair.problem.type": "Тип проблемы",
+    "datetime.repair.current.format": "Текущий формат",
+    "datetime.repair.suggested.format": "Рекомендуемый формат",
+    "datetime.repair.action": "Действие",
+    "datetime.repair.missing.date": "Отсутствует дата",
+    "datetime.repair.invalid.format": "Неверный формат",
+    "datetime.repair.read.error": "Ошибка чтения",
+    "datetime.repair.cannot.fix": "Невозможно восстановить",
+    "datetime.repair.single.fix": "Восстановить",
+    "datetime.repair.all.success": "Отлично!",
+    "datetime.repair.all.valid": "Все статьи имеют правильный формат времени согласно требованиям Hugo",
+    "datetime.repair.confirm": "Вы уверены, что хотите массово восстановить формат времени всех блогов?\nЭто изменит содержимое файлов, рекомендуется сделать резервную копию.",
+    "datetime.repair.repairing": "Восстановление...",
+    "datetime.repair.completed": "Массовое восстановление завершено!",
+    "datetime.repair.success.single": "Успешно восстановлено!",
+    "articles.publish.date": "Дата публикации",
+    "articles.publish.date.help": "Установить время публикации статьи",
+    "datetime.format.warning": "Текущий формат времени не соответствует требованиям Hugo (необходим формат RFC3339)",
+    "datetime.current.format": "Текущий формат",
+    "datetime.suggested.format": "Рекомендуемый формат",
+    "articles.editor.title": "Редактировать статью",
+    "articles.editor.content": "Редактирование содержимого",
+    "articles.editor.metadata": "Метаданные",
+    "articles.editor.settings": "Расширенные настройки",
+    "articles.editor.markdown.content": "Содержимое Markdown",
+    "articles.editor.insert.image": "Вставить изображение",
+    "articles.editor.title.label": "Заголовок статьи",
+    "articles.editor.author": "Автор",
+    "articles.editor.type": "Тип статьи",
+    "articles.editor.categories": "Категории",
+    "articles.editor.tags": "Теги",
+    "articles.editor.url": "URL/Постоянная ссылка",
+    "articles.new.article": "Новая статья",
+    "articles.back.to.list": "Вернуться к списку",
+    "articles.preview": "Предпросмотр",
+    "articles.preview.title": "Предпросмотр статьи",
+    "articles.preview.loading": "Загрузка содержимого статьи...",
+    "nav.tools": "Панель инструментов",
+    "nav.books": "Коллекция книг",
+    "nav.wiki": "База знаний",
+    "wiki.category.ai": "Руководство по программированию с ИИ",
+    "wiki.category.claude": "Использование Claude Code",
+    "wiki.category.mcp": "Протокол MCP",
+    "wiki.category.terms": "Словарь терминов ИИ",
+    "wiki.category.examples": "Практические примеры",
+    "tools.title": "Панель инструментов",
+    "tools.subtitle": "Собирайте и управляйте часто используемыми программными и онлайн-инструментами",
+    "books.title": "Коллекция книг",
+    "books.subtitle": "Собирайте и управляйте техническими книгами, документацией и учебными ресурсами",
+    "wiki.title": "База знаний",
+    "wiki.subtitle": "Собирайте и управляйте руководствами по использованию MCP, терминологией ИИ и технической документацией"
 }
