--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -415,8 +415,149 @@
     "wiki.category.examples": "实践案例",
     "tools.title": "工具箱",
     "tools.subtitle": "收藏和管理您常用的工具软件和在线工具",
+    "tools.add.tool": "添加工具",
+    "tools.form.name": "工具名称",
+    "tools.form.category": "分类",
+    "tools.form.icon": "图标",
+    "tools.form.url": "链接地址",
+    "tools.form.description": "描述",
+    "tools.form.tags": "标签",
+    "tools.form.favorite": "标记为收藏",
     "books.title": "书籍收藏",
     "books.subtitle": "收藏和管理您的技术书籍、文档和学习资源",
+    "books.add.book": "添加书籍",
+    "books.form.title": "书籍标题",
+    "books.form.category": "分类",
+    "books.form.author": "作者",
+    "books.form.publisher": "出版社",
+    "books.form.url": "链接地址",
+    "books.form.cover": "封面图片URL",
+    "books.form.description": "描述",
+    "books.form.rating": "评分",
+    "books.form.status": "阅读状态",
+    "books.form.tags": "标签",
+    "books.status.want": "想读",
+    "books.status.reading": "在读",
+    "books.status.completed": "已读",
+    "books.status.reference": "参考",
+    "books.rating.unrated": "未评分",
+    "books.rating.5": "★★★★★ (5分)",
+    "books.rating.4": "★★★★☆ (4分)",
+    "books.rating.3": "★★★☆☆ (3分)",
+    "books.rating.2": "★★☆☆☆ (2分)",
+    "books.rating.1": "★☆☆☆☆ (1分)",
     "wiki.title": "知识库",
-    "wiki.subtitle": "收藏和管理MCP使用指南、AI术语和技术文档"
+    "wiki.subtitle": "收藏和管理MCP使用指南、AI术语和技术文档",
+    "wiki.add.entry": "添加条目",
+    "wiki.form.title": "条目标题",
+    "wiki.form.category": "分类",
+    "wiki.form.type": "条目类型",
+    "wiki.form.difficulty": "难度等级",
+    "wiki.form.url": "链接地址",
+    "wiki.form.description": "描述",
+    "wiki.form.tags": "标签",
+    "wiki.form.keywords": "关键词",
+    "wiki.form.official": "官方文档",
+    "wiki.form.favorite": "重要条目",
+    "wiki.form.frequent": "常用条目",
+    "wiki.search.title": "知识搜索",
+    "wiki.type.guide": "使用指南",
+    "wiki.type.reference": "参考文档",
+    "wiki.type.tutorial": "教程",
+    "wiki.type.glossary": "术语解释",
+    "wiki.type.example": "示例代码",
+    "wiki.difficulty.beginner": "入门",
+    "wiki.difficulty.intermediate": "中级",
+    "wiki.difficulty.advanced": "高级",
+    "wiki.difficulty.expert": "专家",
+    
+    "deploy.multi.title": "部署管理",
+    "deploy.multi.subtitle": "管理多个部署目标，支持独立配置和部署控制",
+    "deploy.quick.operations": "快速操作",
+    "deploy.build.control": "构建控制",
+    "deploy.build.action": "构建",
+    "deploy.clean.action": "清理",
+    "deploy.build.waiting": "等待构建",
+    "deploy.preview.service": "预览服务",
+    "serve.start.action": "启动",
+    "serve.stop.action": "停止",
+    "serve.restart.action": "重启",
+    "serve.not.running": "未运行",
+    "deploy.batch.operations": "批量操作",
+    "deploy.full.deploy": "全量",
+    "deploy.incremental.deploy": "增量",
+    "deploy.build.required": "需先构建",
+    "deploy.sync.status": "同步状态",
+    "deploy.sync.success": "成功",
+    "deploy.sync.failed": "失败",
+    "deploy.sync.pending": "待同步",
+    "deploy.statistics": "统计信息",
+    "deploy.files.count": "个文件",
+    "deploy.transfer.size": "传输量",
+    "deploy.no.statistics": "暂无统计数据",
+    "deploy.server.list": "服务器列表",
+    "deploy.server.disabled": "已禁用",
+    "common.not.set": "-",
+    "deploy.waiting.deploy": "等待部署",
+    "deploy.config.server": "配置服务器",
+    "deploy.test.connection": "测试连接",
+    "deploy.operation.log": "操作日志",
+    "deploy.clear.log": "清空日志",
+    "deploy.log.ready": "准备就绪，等待操作...",
+    "deploy.domain.optional": "域名 (可选)",
+    "deploy.host.placeholder": "例如：192.168.1.100",
+    
+    "images.title": "静态文件管理",
+    "images.subtitle": "管理Hugo项目的静态文件资源，包括图片、CSS、JS等",
+    "images.upload.files": "上传文件",
+    "images.filter.files": "筛选文件",
+    "images.select.all": "全选",
+    "images.clear.selection": "取消选择",
+    "images.download.selected": "下载选中",
+    "images.delete.selected": "删除选中",
+    "images.file.list": "文件列表",
+    "images.file.name": "文件名",
+    "images.file.size": "大小",
+    "images.file.type": "类型",
+    "images.file.modified": "修改时间",
+    "images.file.actions": "操作",
+    "images.no.files": "没有文件",
+    "images.no.files.hint": "当前目录为空，请上传文件或选择其他目录",
+    "images.current.hugo.project": "当前Hugo项目：",
+    "images.directory.title": "静态文件目录",
+    "images.files.count": "个文件",
+    "images.total.size": "总大小",
+    "images.stats.template": "图片: 0个 (0 B)",
+    "images.create.folder": "新建文件夹",
+    "images.static.files": "静态文件",
+    "images.total.files.count": "总文件数",
+    "images.total.capacity": "总容量",
+    "images.image.files": "图片文件",
+    "images.image.capacity": "图片容量",
+    "images.no.images": "暂无图片",
+    "images.upload.hint": "点击上方“上传图片”按钮添加图片",
+    "images.upload.now": "立即上传",
+    "images.upload.images": "上传图片",
+    "images.upload.drop.hint": "拖拽图片到这里或点击选择文件",
+    "images.upload.formats": "支持 JPG、PNG、GIF、WebP、SVG 格式",
+    "images.new.folder": "新建文件夹",
+    
+    "trash.title": "回收站",
+    "trash.subtitle": "管理已删除的文章，可以恢复或永久删除",
+    "trash.restore.selected": "恢复选中",
+    "trash.empty.trash": "清空回收站",
+    "trash.files.count": "个文件",
+    "trash.files.list": "回收站文件",
+    "trash.select.all": "全选",
+    "trash.clear.selection": "取消选择",
+    "trash.permanent.delete": "永久删除",
+    "trash.empty.title": "回收站为空",
+    "trash.empty.message": "没有已删除的文件",
+    "trash.current.hugo.project": "当前Hugo项目：",
+    "trash.load.failed": "加载回收站失败",
+    "trash.original.path": "原路径",
+    "trash.delete.time": "删除时间",
+    "trash.restore": "恢复",
+    
+    "footer.copyright": "Hugo Manager © 2025 - 让文件管理更安全"
 }
