--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -234,5 +234,189 @@
     "hugo.install.available.version": "可用版本",
     "hugo.install.installing": "正在安裝Hugo...",
     "hugo.install.success": "Hugo安裝成功！",
-    "hugo.install.failed": "Hugo安裝失敗"
+    "hugo.install.failed": "Hugo安裝失敗",
+    "categories.title": "分類管理",
+    "categories.subtitle": "管理工具、書籍、Wiki等模組的分類配置",
+    "categories.create": "建立分類",
+    "categories.add": "新增分類",
+    "categories.modules.tools": "工具管理分類",
+    "categories.modules.books": "書籍管理分類",
+    "categories.modules.wiki": "Wiki管理分類",
+    "categories.form.name": "分類名稱",
+    "categories.form.name.placeholder": "輸入分類名稱",
+    "categories.form.icon": "圖示",
+    "categories.form.icon.placeholder": "Bootstrap圖示名稱",
+    "categories.form.icon.help": "如：folder、tags、gear",
+    "categories.form.color": "顏色",
+    "categories.form.description": "描述",
+    "categories.form.description.placeholder": "分類的描述資訊（可選）",
+    "categories.form.enabled": "啟用分類",
+    "categories.form.sort_order": "排序",
+    "settings.category.management": "分類管理",
+    "settings.category.description": "管理工具箱、書籍收藏、Wiki知識庫等模組的分類配置",
+    "settings.manage.categories": "管理分類",
+    "tools.manage.categories": "管理分類",
+    "books.manage.categories": "管理分類",
+    "wiki.manage.categories": "管理分類",
+    "articles.title": "文章清單",
+    "articles.subtitle": "瀏覽所有部落格文章，支援分頁和時間篩選",
+    "articles.total.count": "篇文章",
+    "articles.filter": "篩選文章",
+    "articles.filter.year": "按年份篩選",
+    "articles.filter.month": "按月份篩選",
+    "articles.filter.all.years": "所有年份",
+    "articles.filter.all.months": "所有月份",
+    "articles.month.1": "1月",
+    "articles.month.2": "2月",
+    "articles.month.3": "3月",
+    "articles.month.4": "4月",
+    "articles.month.5": "5月",
+    "articles.month.6": "6月",
+    "articles.month.7": "7月",
+    "articles.month.8": "8月",
+    "articles.month.9": "9月",
+    "articles.month.10": "10月",
+    "articles.month.11": "11月",
+    "articles.month.12": "12月",
+    "articles.actions": "操作",
+    "articles.filter.apply": "套用篩選",
+    "articles.filter.clear": "清除篩選",
+    "articles.list": "文章清單",
+    "articles.showing": "顯示",
+    "articles.items": "項",
+    "articles.root.directory": "根目錄",
+    "articles.edit": "編輯",
+    "articles.no.articles": "暫無文章",
+    "articles.no.articles.hint": "目前篩選條件下沒有找到文章",
+    "articles.back.home": "返回首頁",
+    "articles.current.project": "目前Hugo專案：",
+    "articles.delete.confirm": "確定要刪除這篇文章嗎？文章將移至資源回收筒。",
+    "articles.delete.failed": "刪除失敗",
+    "articles.delete.success": "文章已移至資源回收筒",
+    "articles.delete.error": "刪除失敗",
+    "articles.pagination.first": "首頁",
+    "articles.pagination.prev": "上一頁",
+    "articles.pagination.next": "下一頁",
+    "articles.pagination.last": "末頁",
+    "home.view.all.articles": "檢視全部文章",
+    "articles.tab.published": "已發布",
+    "articles.tab.drafts": "草稿箱",
+    "articles.tab.issues": "問題檢測",
+    "articles.draft.badge": "草稿",
+    "articles.search.filter": "搜尋和篩選",
+    "articles.search": "搜尋文章",
+    "articles.search.placeholder": "輸入關鍵詞搜尋標題或內容...",
+    "articles.search.actions": "搜尋操作",
+    "articles.search.button": "搜尋",
+    "articles.search.clear": "清除",
+    "articles.filter.actions": "篩選操作",
+    "articles.filter.clear.all": "清除全部",
+    "articles.search.results": "搜尋結果：",
+    "articles.search.found": "找到",
+    "articles.search.articles": "篇文章",
+    "articles.issues.detected": "發現問題：",
+    "deploy.multi.title": "多伺服器部署管理",
+    "deploy.multi.subtitle": "管理多個部署目標，支援獨立配置和部署控制",
+    "deploy.server.name": "伺服器名稱",
+    "deploy.server.domain": "網域",
+    "deploy.server.host": "伺服器位址",
+    "deploy.server.status": "狀態",
+    "deploy.server.progress": "進度",
+    "deploy.server.actions": "操作",
+    "deploy.server.add": "新增伺服器",
+    "deploy.server.config": "配置",
+    "deploy.server.deploy": "部署",
+    "deploy.server.build.deploy": "建立+部署",
+    "deploy.server.pause": "暫停",
+    "deploy.server.resume": "繼續",
+    "deploy.server.stop": "停止",
+    "deploy.server.delete": "刪除",
+    "deploy.server.test": "測試連線",
+    "deploy.status.idle": "閒置",
+    "deploy.status.building": "建立中",
+    "deploy.status.deploying": "部署中",
+    "deploy.status.success": "成功",
+    "deploy.status.failed": "失敗",
+    "deploy.status.paused": "已暫停",
+    "deploy.modal.server.config": "伺服器配置",
+    "deploy.modal.server.name.placeholder": "例如：生產伺服器",
+    "deploy.modal.domain.placeholder": "例如：example.com",
+    "deploy.modal.enabled": "啟用此伺服器",
+    "deploy.modal.save": "儲存配置",
+    "deploy.modal.cancel": "取消",
+    "deploy.confirm.delete": "確定要刪除這個伺服器配置嗎？",
+    "deploy.no.servers": "暫無伺服器配置",
+    "deploy.no.servers.hint": "點擊『新增伺服器』按鈕建立第一個部署目標",
+    "build.hugo.title": "Hugo建立",
+    "build.build.site": "建立站點",
+    "build.clean.build": "清理並建立",
+    "build.description": "產生靜態HTML檔案，為部署做準備",
+    "serve.status.running": "執行中",
+    "serve.status.stopped": "已停止",
+    "serve.open": "開啟預覽",
+    "serve.start": "啟動服務",
+    "serve.restart": "重新啟動服務",
+    "serve.stop": "停止服務",
+    "settings.hugo.path.not.set": "Hugo專案路徑未設定",
+    "articles.path.not.exist": "文章目錄不存在",
+    "datetime.repair.title": "時間修復",
+    "datetime.repair.check": "檢查時間格式",
+    "datetime.repair.batch": "批次修復時間",
+    "datetime.repair.checking": "正在檢查時間格式...",
+    "datetime.repair.total.files": "總檔案數",
+    "datetime.repair.valid.count": "格式正確",
+    "datetime.repair.invalid.count": "需要修復",
+    "datetime.repair.success.rate": "正確率",
+    "datetime.repair.invalid.files": "需要修復的檔案",
+    "datetime.repair.problem.type": "問題類型",
+    "datetime.repair.current.format": "目前格式",
+    "datetime.repair.suggested.format": "建議格式",
+    "datetime.repair.action": "操作",
+    "datetime.repair.missing.date": "缺少日期",
+    "datetime.repair.invalid.format": "格式錯誤",
+    "datetime.repair.read.error": "讀取失敗",
+    "datetime.repair.cannot.fix": "無法修復",
+    "datetime.repair.single.fix": "修復",
+    "datetime.repair.all.success": "太棒了！",
+    "datetime.repair.all.valid": "所有文章的時間格式都符合Hugo要求",
+    "datetime.repair.confirm": "確定要批次修復所有部落格的時間格式嗎？\n這將修改檔案內容，建議先備份。",
+    "datetime.repair.repairing": "修復中...",
+    "datetime.repair.completed": "批次修復完成！",
+    "datetime.repair.success.single": "修復成功！",
+    "articles.publish.date": "發布日期",
+    "articles.publish.date.help": "設定文章的發布時間",
+    "datetime.format.warning": "目前時間格式不符合Hugo要求（需RFC3339格式）",
+    "datetime.current.format": "目前格式",
+    "datetime.suggested.format": "建議格式",
+    "articles.editor.title": "編輯文章",
+    "articles.editor.content": "內容編輯",
+    "articles.editor.metadata": "中繼資料",
+    "articles.editor.settings": "進階設定",
+    "articles.editor.markdown.content": "Markdown 內容",
+    "articles.editor.insert.image": "插入圖片",
+    "articles.editor.title.label": "文章標題",
+    "articles.editor.author": "作者",
+    "articles.editor.type": "文章類型",
+    "articles.editor.categories": "分類",
+    "articles.editor.tags": "標籤",
+    "articles.editor.url": "URL/永久連結",
+    "articles.new.article": "新建文章",
+    "articles.back.to.list": "返回清單",
+    "articles.preview": "預覽",
+    "articles.preview.title": "文章預覽",
+    "articles.preview.loading": "正在載入文章內容...",
+    "nav.tools": "工具箱",
+    "nav.books": "書籍收藏",
+    "nav.wiki": "知識庫",
+    "wiki.category.ai": "AI程式設計指南",
+    "wiki.category.claude": "Claude Code使用",
+    "wiki.category.mcp": "MCP協定",
+    "wiki.category.terms": "AI術語詞典",
+    "wiki.category.examples": "實踐案例",
+    "tools.title": "工具箱",
+    "tools.subtitle": "收藏和管理您常用的工具軟體和線上工具",
+    "books.title": "書籍收藏",
+    "books.subtitle": "收藏和管理您的技術書籍、文件和學習資源",
+    "wiki.title": "知識庫",
+    "wiki.subtitle": "收藏和管理MCP使用指南、AI術語和技術文件"
 }
